# EmberSight

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
embersight/: __init__.py
resources/: brand.md
